Gtk-3.20&3.22&3.24: [GtkSpinner] Fix unwanted shifting labels in Ephy tabs
GtkSpinner images should have the same width with favicons,
so switch to non-scaling unit for min-width.

--- a/gtk/sass/3.24/_common.scss
+++ b/gtk/sass/3.24/_common.scss
@@ -3158,6 +3158,12 @@ notebook {
       // weird wdiget gets in our way
       & > widget > box > image { padding: rem(6.7px); }
     }
+
+    spinner {
+      min-height: rem($icon_size);
+      min-width: $icon_size;
+      padding: rem(6.7px) 0 rem(6.7px);
+    }
   }
 
   &:not(.reorderable-page) > entry { @extend entry.flat; }
